updated StreamOperations3 class and tests