@@ -1,45 +1,39 @@
 package streamapi3;
 
+import lombok.NonNull;
 import lombok.experimental.UtilityClass;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.IntStream;
+import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.Objects;
+import java.util.stream.IntStream;
+import java.util.Arrays;
 
 @UtilityClass
 public class StreamOperations3 {
 
-    private static final String ERR_NULL_FRIENDS_MAP = "Friends map must not be null";
     private static final String ERR_NULL_EMPLOYEES_LIST = "Employees list must not be null";
     private static final String ERR_NULL_INPUT_STRING = "Input string must not be null";
 
-    public List<PeoplePair> findPeopleWithCommonFriends(Map<String, List<String>> friendsMap) {
-        if (friendsMap == null) {
-            throw new IllegalArgumentException(ERR_NULL_FRIENDS_MAP);
-        }
-        List<String> people = friendsMap.keySet().stream().sorted().toList();
-        return IntStream.range(0, people.size())
-                .boxed()
-                .flatMap(i -> IntStream.range(i + 1, people.size())
-                        .mapToObj(j -> {
-                            String person1 = people.get(i);
-                            String person2 = people.get(j);
-                            List<String> friends1 = friendsMap.getOrDefault(person1, List.of());
-                            List<String> friends2 = friendsMap.getOrDefault(person2, List.of());
-                            boolean areFriends = friends1.contains(person2) || friends2.contains(person1);
-                            List<String> commonFriends = friends1.stream()
-                                    .filter(friends2::contains)
-                                    .toList();
-                            if (!areFriends && !commonFriends.isEmpty()) {
-                                return new PeoplePair(person1, person2);
+    public static Set<List<String>> findPeopleWithCommonFriends(@NonNull Map<String, List<String>> friendships) {
+        Set<List<String>> result = new HashSet<>();
+        friendships.forEach((person, friends) ->
+                friendships.keySet().stream()
+                        .filter(other -> !other.equals(person) && !friends.contains(other))
+                        .forEach(other -> {
+                            List<String> commonFriends = friends.stream()
+                                    .filter(friendships.getOrDefault(other, List.of())::contains)
+                                    .collect(Collectors.toList());
+                            if (!commonFriends.isEmpty()) {
+                                List<String> pair = Arrays.asList(person, other);
+                                pair.sort(String::compareTo);
+                                result.add(pair);
                             }
-                            return null;
-                        }))
-                .filter(Objects::nonNull)
-                .toList();
+                        })
+        );
+        return result;
     }
-
     public Map<String, Double> averageSalaryByDepartment(List<Employee> employees) {
         if (employees == null) {
             throw new IllegalArgumentException(ERR_NULL_EMPLOYEES_LIST);
@@ -96,12 +90,5 @@ public class StreamOperations3 {
                 .filter(i -> number % i == 0)
                 .sum();
         return sum == number;
-    }
-
-    public static record PeoplePair(String person1, String person2) {
-        @Override
-        public String toString() {
-            return "(" + person1 + ", " + person2 + ")";
-        }
     }
 }
